# docs

./: .gitignore  01_chunk_generate_embeddings_and_golden_test_set.py  02_vector_database_population.py  03_prepare_data_set_for_evaluation.py  04_evaluate_rag_iteration.py  README.md  advanced_results.txt  clear_qdrant.py  evaluate_rag.py  evaluation_results.csv  generate_golden_test_results.py  generate_golden_tests.py  golden_data_set_experiment_1.csv  golden_data_set_experiment_2.csv  golden_data_set_experiment_3.csv  golden_test_dataset.csv  golden_test_generation.md  homework_questions.md  instructions.md  process_pdfs.py  pyproject.toml  rag_graph.py  results_baseline.txt  scrape_ela.py  scrape_ling_mexicana.py  search_results.txt  shared_embeddings.py  test.csv  test.txt
